--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -16,8 +16,12 @@
 //@import 'sections/footer';
 
 //section
+@import 'sections/anim-section';
 @import 'sections/top-section';
 @import 'sections/index-info';
+@import 'sections/why-section';
+@import 'sections/how-section';
+@import 'sections/teacher-section';
 
 //pages
 @import 'pages/index';
