--- a/src/pug/sections/top-section.pug
+++ b/src/pug/sections/top-section.pug
@@ -16,6 +16,7 @@
           li.top-sec-info__item Попасть в группу льготного налогообложения IT-бизнеса
           li.top-sec-info__item Не купить «кота в мешке» при покупке бизнеса
           li.top-sec-info__item Обезопасить себя при продаже бизнеса
+          li.top-sec-info__item Какую систему налогообложения выбрать, после отмены ЕНВД
         .top-sec-info__ps Получите бесплатно онлайн-диагностику от профессионалов по финансам, налогам, бухгалтерским и юридическим вопросам
         button.top-sec-info__btn.btn Записаться на онлайн-диагностику
       //end top-sec-info__left
