--- a/src/style/sections/_header.scss
+++ b/src/style/sections/_header.scss
@@ -1,11 +1,44 @@
-.header{
+.header {
+  position: relative;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 40px;
-  position: absolute;
-  top: 0;
-  left: 0;
+  align-items: center;
   width: 100%;
-  z-index: 20;
+  padding: 40px;
+
+  @include max(800) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  @include max(560) {
+    padding: 40px 25px;
+  }
+}
+
+.header__logo {
+  @include max(800) {
+    margin-bottom: 15px;
+  }
+  img {
+    display: block;
+    width: 100%;
+  }
+}
+
+.header__info {
+  font-size: 16px;
+  text-align: right;
+  color: #1e1e1e;
+
+  @include max(800) {
+    text-align: left;
+  }
+  strong {
+    @include max(1200) {
+      display: block;
+    }
+    @include max(560) {
+      display: inline;
+    }
+  }
 }
