--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,7 +8,7 @@ block variables
 
 block content
   .main-wrap.no-js
-    //include ../sections/anim-section
+    include ../sections/gradient-section
     include ../sections/header
 
     //begin content
@@ -18,7 +18,9 @@ block content
       include ../sections/why-section
       include ../sections/how-section
       include ../sections/teacher-section
+      include ../sections/form-section
     //end content
 
-    //include ../sections/footer
+    include ../sections/footer
+    include ../elements/popup
     include ../sections/scripts
