--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -1,4 +1,30 @@
 //begin footer
-footer.footer(style='background-color:#167;color:#fff;text-align:center;text-transform:uppercase;')
-  h1 footer
+.footer
+  .container
+    //begin footer__left
+    .footer__left
+      a(href="#").footer__logo
+        img(src="assets/img/logo-footer.svg" alt="picture")
+      span ООО Консалтинговая компания «ТОП-ЛАЙН». Все права защищены. © 2007-2020
+      span Запрещено использование материалов сайта без согласия его авторов и обратной ссылки.
+    //end footer__left
+      
+    //begin footer__right
+    .footer__right
+      a(href="tel:88003508108").footer__phone 8 (800) 350-81-08
+      a(href="mailto:info@1topline.ru").footer__mail info@1topline.ru
+      ul.footer__social.footer-social__list
+        li.footer-social__item
+          a(href="https://www.facebook.com/topline.cc" target="_blank").footer-social__link
+            img(src="assets/img/fb.png" alt="picture")
+        li.footer-social__item
+          a(href="https://www.instagram.com/topline.cc/" target="_blank").footer-social__link
+            img(src="assets/img/inst.png" alt="picture")
+        li.footer-social__item
+          a(href="https://zen.yandex.ru/id/5be98a28d6751400ab789a5e" target="_blank").footer-social__link
+            img(src="assets/img/zen.png" alt="picture")
+        li.footer-social__item
+          a(href="https://vk.com/public196282190" target="_blank").footer-social__link
+            img(src="assets/img/vk.png" alt="picture")
+    //end footer__right
 //end footer
