--- a/src/style/elements/_popup.scss
+++ b/src/style/elements/_popup.scss
@@ -6,81 +6,101 @@
   bottom: 0;
   left: 0;
   display: none;
-  opacity: .8;
-  background-color: #2f2d2d;
+  opacity: .4;
+  background-color: #1e1e1e;
 }
 
 .popup {
   position: fixed;
   z-index: 100;
-  top: 50%;
-  left: 50%;
-  display: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
   overflow: auto;
-  width: 80%;
-  max-width: 700px;
-  max-height: 95vh;
-  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 100vh;
+  padding: 100px 40px 100px 50px;
+  transition: $transition-hover;
+  transform: translateX(100%);
   background-color: #fff;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, .1);
+
+  @include max(1000) {
+    width: 70%;
+  }
+  @include max(767) {
+    width: 90%;
+  }
+  @include max(560) {
+    padding: 80px 25px 70px 25px;
+  }
+  &.active {
+    transform: translateX(0);
+  }
 }
 
 .popup__close {
   position: absolute;
   z-index: 1;
-  top: 20px;
-  right: 20px;
-  width: 20px;
-  height: 20px;
+  top: 40px;
+  right: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   transition: transform $transition-hover;
+  border: 1px solid #4e2d5e;
+  border-radius: 50%;
 
   will-change: transform;
   &:hover {
     transform: rotate(360deg);
   }
   svg {
-    fill: #1e1e1e;
-    width: 20px;
-    height: 20px;
+    fill: #4e2d5e;
+    width: 11px;
+    height: 11px;
   }
 }
 
-.popup__header {
-  padding: 25px;
-  background-color: #f7f7f7;
-}
-
 .popup__title {
-  font-size: 40px;
-  line-height: 1;
-  margin: 0;
-  text-align: center;
-  color: $text;
-}
-
-.popup__body {
-  padding: 35px 20px 50px 20px;
-}
-
-.popup__form {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.popup__form-input {
-  width: 46%;
-}
-
-.popup__form-textarea {
-  width: 100%;
-  height: 100px;
-  margin-top: 20px;
+  font-weight: 800;
+  line-height: 1.4;
   margin-bottom: 50px;
-  padding: 10px;
+  color: #1e1e1e;
+
+  @include responsive-font(25, 20);
+}
+
+.popup__list {
+  margin: 0 0 50px 0;
+  padding: 0;
+  li {
+    font-weight: normal;
+    position: relative;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    list-style: none;
+    color: #1e1e1e;
+
+    @include responsive-font(15, 14);
+    &::before {
+      position: absolute;
+      top: 4px;
+      left: 0;
+      width: 13px;
+      height: 10px;
+      content: '';
+      background-image: url('../img/ul.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+}
+
+.popup__btn {
+  width: 100%;
+  max-width: 350px;
+  margin-bottom: 30px;
 }
