--- a/src/style/sections/_how-section.scss
+++ b/src/style/sections/_how-section.scss
@@ -1,9 +1,10 @@
 .how-sec {
   padding-top: 95px;
   padding-bottom: 65px;
+
   @include max(1000) {
     padding-top: 70px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 }
 
@@ -23,7 +24,6 @@
   margin: 0 auto 41px;
   text-align: center;
   color: #1e1e1e;
-
 }
 
 .how-sec__subtitle-ps {
