--- a/src/style/sections/_top-section.scss
+++ b/src/style/sections/_top-section.scss
@@ -1,4 +1,5 @@
 .top-sec {
+  position: relative;
   padding-top: 65px;
   background-image: url('../img/bg-top-sec.svg');
   background-repeat: no-repeat;
