--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -64,6 +64,33 @@ ul {
   }
 }
 
+.custom-ul {
+  margin: 0 0 22px 0;
+  padding: 0;
+
+  li {
+    font-size: 15px;
+    font-weight: normal;
+    line-height: 1.5;
+    position: relative;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    list-style: none;
+    color: #1e1e1e;
+    &::before {
+      position: absolute;
+      top: 4px;
+      left: 0;
+      width: 13px;
+      height: 10px;
+      content: '';
+      background-image: url('../img/ul.png');
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+}
+
 //кастомные пункты списка с цифрами
 ol {
   // list-style: none;
