--- a/src/pug/elements/popup.pug
+++ b/src/pug/elements/popup.pug
@@ -16,7 +16,7 @@
       li В группе имеет место совместное использование трудовых, материальных, финансовых ресурсов основного участника.
       li  Участники схемы разделяются на центры формирования прибыли и центры формирования затрат с помощью контролируемого распределения выручки.
       li При формально-юридической независимости члены группы фактически не самостоятельны, управленческие решения принимаются одним членом группы, который и осуществляет реальный контроль за их исполнением.
-    button.popup__btn.btn Записаться на диагностику
+    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
   //end popup__header
 //end popup-01
 
@@ -39,7 +39,7 @@
       li Расскажем, как организовать учёт ТМЦ при отсутствии складов.
       li Организуем учёт так, чтобы пресечь воровство сотрудников компании.
       li Деньги компании = мои деньги = общая касса.
-    button.popup__btn.btn Записаться на диагностику
+    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
   //end popup__header
 //end popup-02
 
@@ -59,7 +59,7 @@
       li Организуем оперативный бухгалтерский и налоговый учёт, позволяющий быстро отвечать на запросы банка.
       li Постоянно растущая кредиторская задолженность.
       li Поможем избавиться от «бумажного» затоваривания складов.
-    button.popup__btn.btn Записаться на диагностику
+    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
   //end popup__header
 //end popup-03
 
@@ -77,7 +77,7 @@
       li Вся прибыль бизнеса уходит на погашение процентов по кредитам.
       li Изучив представленную бухгалтерскую отчётность, банки отказывают в выдаче кредитов.
       li Отсутствие залогов, активов на балансе компании и, как следствие, отсутствие кредитов.
-    button.popup__btn.btn Записаться на диагностику
+    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
   //end popup__header
 //end popup-04
 
@@ -97,7 +97,7 @@
       li Проверим правильность сформированных отчётов об использовании бюджетных средств.
       li Расскажем, как оформить документы для участия в тендерах, чтобы вас не отклоняли по формальному признаку – из-за низкого качества предоставляемых документов.
       li Поможем подготовиться к проверке счётной палаты в части целевого использования бюджетных средств.
-    button.popup__btn.btn Записаться на диагностику
+    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
   //end popup__header
 //end popup-05
 
@@ -116,7 +116,7 @@
       li Поможем не платить НДС с продажи созданного вами программного обеспечения.
       li Поможем выбрать оптимальный режим налогообложения для юрлиц, создающих и продающих ПО.
       li Расскажем, как легализовать фонд оплаты труда.
-    button.popup__btn.btn Записаться на диагностику
+    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
   //end popup__header
 //end popup-06
 
@@ -139,6 +139,6 @@
       li Поможем правильно прочитать управленческую отчётность.
       li Оценим приобретаемую долю бизнеса.
       li Рассчитаем стоимость чистых активов
-    button.popup__btn.btn Записаться на диагностику
+    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
   //end popup__header
 //end popup-07
