--- a/src/pug/sections/top-section.pug
+++ b/src/pug/sections/top-section.pug
@@ -18,7 +18,7 @@
           li.top-sec-info__item Обезопасить себя при продаже бизнеса
           li.top-sec-info__item Какую систему налогообложения выбрать, после отмены ЕНВД
         .top-sec-info__ps Получите бесплатно онлайн-диагностику от профессионалов по финансам, налогам, бухгалтерским и юридическим вопросам
-        button.top-sec-info__btn.btn Записаться на онлайн-диагностику
+        a(href="#form-sec").top-sec-info__btn.btn.scroll-link Записаться на онлайн-диагностику
       //end top-sec-info__left
 
       //begin top-sec-info__right
