--- a/src/pug/sections/why-section.pug
+++ b/src/pug/sections/why-section.pug
@@ -53,5 +53,5 @@
     //end why-sec-info
 
     .why-sec__footer
-      button.why-sec__btn.btn Записаться на диагностику
+      a(href="#form-sec").why-sec__btn.btn.scroll-link Записаться на диагностику
 //end why-sec
