--- a/src/pug/sections/form-section.pug
+++ b/src/pug/sections/form-section.pug
@@ -1,5 +1,5 @@
 //begin form-sec
-.form-sec
+.form-sec#form-sec
   .container
     h2.form-sec__title Запишитесь на диагностику и узнайте, как защитить ваш бизнес и подготовить к изменениям 2021 года
     //begin form-sec__row
