--- a/src/pug/pages/subscribe.pug
+++ b/src/pug/pages/subscribe.pug
@@ -1,16 +1,5 @@
 extends ../_template
 
-mixin subscribe-videos__item()
-  li.subscribe-videos__item
-    a(href="https://www.youtube.com/watch?v=SztlUWd83ao&app=desktop" data-fancybox="videos").subscribe-videos__link
-      .subscribe-videos__cover
-        img(src="assets/img/video-cover.jpg" alt="picture")
-        .subscribe-videos__play
-          img(src="assets/img/play-01.svg" alt="picture")
-          img(src="assets/img/play-02.svg" alt="picture")
-      .subscribe-videos__text
-        span Название показываем 3-4 ролика про компанию и про возможности
-
 block variables
   - var title       = 'Topline'
   - var description = 'Topline'
@@ -20,16 +9,16 @@ block variables
 block content
   .main-wrap.no-js
     include ../sections/gradient-section
-    include ../sections/header
 
     //begin content
     main.main.subscribe
+      include ../sections/header
       .container
 
         //begin subscribe__info
         .subscribe__info.subscribe-info
           .subscribe-info__left
-            h2.subscribe-info__title <span>Подписывайтесь</span> на еженедельные новости компании «ТОП ЛАЙН»
+            h2.subscribe-info__title <span>Подписывайтесь</span> на еженедельные новости компании «TOPLINE»
             ul.subscribe-info__list.custom-ul
               li Дайджест публикаций
               li Изменения в законодательствах
@@ -41,62 +30,68 @@ block content
 
         //begin subscribe__links
         .subscribe__links.subscribe-links
-          ul.subscribe-links__list
-            li.subscribe-links__item
-              a(href="https://1topline.ru/stati/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-blog')
-                span.subscribe-links__text Блог Натальи Ненашевой
+          //begin subscribe-links-block
+          .subscribe-links-block
+            h3.subscribe-links-block__title Соцсети Натальи Ненашевой:
+            ul.subscribe-links__list
+              li.subscribe-links__item
+                a(href="https://1topline.ru/stati/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
+                  .subscribe-links__icon
+                    +svg('sub-blog')
+                  span.subscribe-links__text Блог
 
-            li.subscribe-links__item
-              a(href="https://www.instagram.com/nenasheva_natalya/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-inst')
-                span.subscribe-links__text Инстаграм Натальи
+              li.subscribe-links__item
+                a(href="https://www.instagram.com/nenasheva_natalya/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
+                  .subscribe-links__icon
+                    +svg('sub-inst')
+                  span.subscribe-links__text Инстаграм
 
-            li.subscribe-links__item
-              a(href="https://www.instagram.com/topline.cc/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-inst')
-                span.subscribe-links__text Инстаграм «ТОП ЛАЙН»
+              li.subscribe-links__item
+                a(href="https://www.facebook.com/natalya.nenasheva.3" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
+                  .subscribe-links__icon
+                    +svg('sub-fb')
+                  span.subscribe-links__text Facebook
 
-            li.subscribe-links__item
-              a(href="https://vk.com/public196282190" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-vk')
-                span.subscribe-links__text «ТОП ЛАЙН» ВКонтакте
+              li.subscribe-links__item
+                a(href="https://www.youtube.com/watch?v=SztlUWd83ao&app=desktop" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
+                  .subscribe-links__icon
+                    +svg('sub-yt')
+                  span.subscribe-links__text Youtube-канал
+          //end subscribe-links-block
 
-            li.subscribe-links__item
-              a(href="https://www.facebook.com/natalya.nenasheva.3" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-fb')
-                span.subscribe-links__text Facebook Натальи
+          //begin subscribe-links-block
+          .subscribe-links-block
+            h3.subscribe-links-block__title Соцсети компании TOPLINE:
+            ul.subscribe-links__list
+              li.subscribe-links__item
+                a(href="https://www.instagram.com/topline.cc/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
+                  .subscribe-links__icon
+                    +svg('sub-inst')
+                  span.subscribe-links__text Инстаграм <span>TOPLINE</span>
 
-            li.subscribe-links__item
-              a(href="https://www.facebook.com/topline.cc" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-fb')
-                span.subscribe-links__text Facebook «ТОП ЛАЙН»
+              li.subscribe-links__item
+                a(href="https://www.facebook.com/topline.cc" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
+                  .subscribe-links__icon
+                    +svg('sub-fb')
+                  span.subscribe-links__text Facebook <span>TOPLINE</span>
 
-            li.subscribe-links__item
-              a(href="https://www.youtube.com/watch?v=SztlUWd83ao&app=desktop" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-yt')
-                span.subscribe-links__text Youtube-канал
-
-            li.subscribe-links__item
-              a(href="https://vk.com/public196282190" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                .subscribe-links__icon
-                  +svg('sub-vk')
-                span.subscribe-links__text «ТОП ЛАЙН» ВКонтакте
+              li.subscribe-links__item
+                a(href="https://vk.com/public196282190" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
+                  .subscribe-links__icon
+                    +svg('sub-vk')
+                  span.subscribe-links__text <span>TOPLINE</span> ВКонтакте
+          //end subscribe-links-block
         //end subscribe__links
-          
+
         //begin subscribe__videos
         .subscribe__videos.subscribe-videos
-          ul.subscribe-videos__list
-            +subscribe-videos__item()
-            +subscribe-videos__item()
-            +subscribe-videos__item()
+          .subscribe-videos__pic
+            img(src="assets/img/subscribe-videos.png" alt="picture")
+          .subscribe-videos__text
+            h3.subscribe-videos__title <span>Подписывайтесь на Youtube канал Натальи Ненашевой </span> и смотрите новые видео каждую неделю!
+            a(href="#").subscribe-videos__btn
+              img(src="assets/img/youtube.png" alt="picture")
+              span Перейти на YouTube-канал
         //end subscribe__videos
     //end content
 
