--- a/src/pug/pages/thnx.pug
+++ b/src/pug/pages/thnx.pug
@@ -9,10 +9,10 @@ block variables
 block content
   .main-wrap.no-js
     include ../sections/gradient-section
-    include ../sections/header
 
     //begin content
     main.main.thnx
+      include ../sections/header
       .container
         header.thnx__header
           h2.thnx__title <span>Спасибо</span> за регистрацию!
@@ -20,7 +20,7 @@ block content
         //begin thnx__info
         .thnx__info.thnx-info
           .thnx-info__left
-            h3.thnx-info__title С вами свяжется специалист компании «ТОП ЛАЙН»
+            h3.thnx-info__title С вами свяжется специалист компании «TOPLINE»
             .thnx-info__text
               span Пока вы ожидаете звонка от специалиста, выберите дату и время диагностики в ближайшие понедельник, среду или пятницу
             button.thnx-info__btn.btn Выбрать дату
