--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -5,7 +5,7 @@
     .footer__left
       a(href="#").footer__logo
         img(src="assets/img/logo-footer.svg" alt="picture")
-      span ООО Консалтинговая компания «ТОП-ЛАЙН». Все права защищены. © 2007-2020
+      span ООО Консалтинговая компания «TOPLINE». Все права защищены. © 2007-2020
       span Запрещено использование материалов сайта без согласия его авторов и обратной ссылки.
     //end footer__left
       
@@ -21,10 +21,14 @@
           a(href="https://www.instagram.com/topline.cc/" target="_blank").footer-social__link
             img(src="assets/img/inst.png" alt="picture")
         li.footer-social__item
-          a(href="https://zen.yandex.ru/id/5be98a28d6751400ab789a5e" target="_blank").footer-social__link
+          //-a(href="https://zen.yandex.ru/id/5be98a28d6751400ab789a5e" target="_blank").footer-social__link
+          a(href="#" target="_blank").footer-social__link
             img(src="assets/img/zen.png" alt="picture")
         li.footer-social__item
           a(href="https://vk.com/public196282190" target="_blank").footer-social__link
             img(src="assets/img/vk.png" alt="picture")
+        li.footer-social__item
+          a(href="#" target="_blank").footer-social__link
+            img(src="assets/img/whatsapp.png" alt="picture")
     //end footer__right
 //end footer
