--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -4,5 +4,5 @@ header.header#header
     img(src="assets/img/logo.svg" alt="topline")
 
   .header__info
-    span <strong>Онлайн-диагностика для владельцев бизнеса</strong> от Натальи Ненашевой и команды экспертов «ТОП-ЛАЙН»
+    span <strong>Онлайн-диагностика для владельцев бизнеса</strong> от Натальи Ненашевой и команды экспертов «TOPLINE»
 //end header
