--- a/src/pug/sections/top-section.pug
+++ b/src/pug/sections/top-section.pug
@@ -7,7 +7,9 @@
     .top-sec__info.top-sec-info
       //begin top-sec-info__left
       .top-sec-info__left
-        h3.top-sec-info__title Узнайте, как:
+        .top-sec-info__ps Получите бесплатно онлайн-диагностику от профессионалов по финансам, налогам, бухгалтерским и юридическим вопросам
+        a(href="#form-sec").top-sec-info__btn.btn.scroll-link Записаться на онлайн-диагностику
+        h3.top-sec-info__title И узнайте, как:
         ul.top-sec-info__list
           li.top-sec-info__item Вести бизнес без обвинений налогового органа в его дроблении
           li.top-sec-info__item Безболезненно «обелить» свой бизнес
@@ -17,8 +19,6 @@
           li.top-sec-info__item Не купить «кота в мешке» при покупке бизнеса
           li.top-sec-info__item Обезопасить себя при продаже бизнеса
           li.top-sec-info__item Какую систему налогообложения выбрать, после отмены ЕНВД
-        .top-sec-info__ps Получите бесплатно онлайн-диагностику от профессионалов по финансам, налогам, бухгалтерским и юридическим вопросам
-        a(href="#form-sec").top-sec-info__btn.btn.scroll-link Записаться на онлайн-диагностику
       //end top-sec-info__left
 
       //begin top-sec-info__right
