--- a/src/pug/sections/how-section.pug
+++ b/src/pug/sections/how-section.pug
@@ -1,40 +1,3 @@
-//-mixin how-accordion__body()
-  //begin how-accordion__body
-  .how-accordion__body
-    //begin how-accordion__step-01
-    .how-accordion__step
-      .how-accordion__step-left
-        .how-accordion__step-left-text Точка А
-      .how-accordion__step-right
-        .how-accordion__step-right-title-mobile Точка А
-        .how-accordion__step-right-text
-          span Компания по танцам развивала сеть в Москве.<br>Задумалась о легализации и масштабировании бизнеса, обратилась в компанию «ТОП-ЛАЙН».
-        .how-accordion__step-right-title Что было в процессе:
-        .how-accordion__step-right-text
-          span <i>Обелили ФОТ, создали необходимое количество операционных  участников бизнеса, интегрировали онлайн-кассы, платёжные системы. Самой актуальной проблемой было не попасть под  легальное дробление бизнеса. Спланировали разумную налоговую нагрузку. Обелили все доходы и расходы.</i>
-    //end how-accordion__step-01
-
-    //begin how-accordion__step-02
-    .how-accordion__step
-      .how-accordion__step-left
-        .how-accordion__step-left-text Точка Б
-      .how-accordion__step-right
-        .how-accordion__step-right-title-mobile Точка Б
-        .how-accordion__step-right-text
-          span «ТОП-ЛАЙН» занялся ликвидацией тех признаков, которые позволили бы обвинить предпринимателя в необоснованном дроблении бизнеса и умышленном уходе от налогов. Мы развели финансовые потоки. Обелили договора аренды. Поставили сеть на путь упаковки франшизы, что является очень хорошим решением для бизнеса с такой спецификой.
-    //end how-accordion__step-02
-
-    //begin how-accordion__step-result
-    .how-accordion__step
-      .how-accordion__step-left
-        .how-accordion__step-left-text Результат
-      .how-accordion__step-right
-        .how-accordion__step-right-title-mobile Результат
-        .how-accordion__step-right-text
-          span <strong>Теперь у нашего заказчика учитывается выручка, реализована торговля товарами через агентскую схему, внедрены элементы в виде ИП на патенте, отлажена работа касс. Бизнес готов к легальному масштабированию.</strong>
-    //end how-accordion__step-result
-  //end how-accordion__body
-
 //begin how-sec
 .how-sec
   .container
@@ -65,7 +28,7 @@
             .how-accordion__step-right
               .how-accordion__step-right-title-mobile Точка А
               .how-accordion__step-right-text
-                span Компания по танцам развивала сеть в Москве.<br>Задумалась о легализации и масштабировании бизнеса, обратилась в компанию «ТОП-ЛАЙН».
+                span Компания по танцам развивала сеть в Москве.<br>Задумалась о легализации и масштабировании бизнеса, обратилась в компанию «TOPLINE».
               .how-accordion__step-right-title Что было в процессе:
               .how-accordion__step-right-text
                 span <i>Обелили ФОТ, создали необходимое количество операционных  участников бизнеса, интегрировали онлайн-кассы, платёжные системы. Самой актуальной проблемой было не попасть под  легальное дробление бизнеса. Спланировали разумную налоговую нагрузку. Обелили все доходы и расходы.</i>
@@ -78,7 +41,7 @@
             .how-accordion__step-right
               .how-accordion__step-right-title-mobile Точка Б
               .how-accordion__step-right-text
-                span «ТОП-ЛАЙН» занялся ликвидацией тех признаков, которые позволили бы обвинить предпринимателя в необоснованном дроблении бизнеса и умышленном уходе от налогов. Мы развели финансовые потоки. Обелили договора аренды. Поставили сеть на путь упаковки франшизы, что является очень хорошим решением для бизнеса с такой спецификой.
+                span «TOPLINE» занялся ликвидацией тех признаков, которые позволили бы обвинить предпринимателя в необоснованном дроблении бизнеса и умышленном уходе от налогов. Мы развели финансовые потоки. Обелили договора аренды. Поставили сеть на путь упаковки франшизы, что является очень хорошим решением для бизнеса с такой спецификой.
           //end how-accordion__step-02
 
           //begin how-accordion__step-result
@@ -127,7 +90,7 @@
             .how-accordion__step-right
               .how-accordion__step-right-title-mobile Точка Б
               .how-accordion__step-right-text
-                span «ТОП-ЛАЙН» сформировал именно инвестиционно-привлекательную отчётность для потенциальных кредиторов.
+                span «TOPLINE» сформировал именно инвестиционно-привлекательную отчётность для потенциальных кредиторов.
                 span Подчистили плохое наследие. Начали внедрять рекомендации, которые касаются уже не бухгалтерского, а управленческого учёта, то есть ставить позаказный метод, раздельный учёт выручки, рекомендации по планированию и правильной организации закупки материалов в привязке к разным объектам. Работа по такому отлаживанию бухучета сверхважна для любого бизнеса.
           //end how-accordion__step-02
 
@@ -177,7 +140,7 @@
             .how-accordion__step-right
               .how-accordion__step-right-title-mobile Точка Б
               .how-accordion__step-right-text
-                span «ТОП-ЛАЙН» создал под клиента специальную схему тонкого разведения финансовых и товарных потоков. Шаги по дифференциации денежных поступлений от бизнеса оказались абсолютно легальны, а в основе схемы были ноу-хау, базирующиеся на компетенциях наших экспертов. Мы дали инструмент, позволяющий проводить дробление в законных, дозволенных рамках.
+                span «TOPLINE» создал под клиента специальную схему тонкого разведения финансовых и товарных потоков. Шаги по дифференциации денежных поступлений от бизнеса оказались абсолютно легальны, а в основе схемы были ноу-хау, базирующиеся на компетенциях наших экспертов. Мы дали инструмент, позволяющий проводить дробление в законных, дозволенных рамках.
           //end how-accordion__step-02
 
           //begin how-accordion__step-result
