--- a/src/style/pages/_subscribe.scss
+++ b/src/style/pages/_subscribe.scss
@@ -81,39 +81,68 @@
 
 //begin #LINKS
 .subscribe-links {
-  padding-bottom: 110px;
-  background-image: url('../img/bg-top-sec.svg');
-  background-repeat: no-repeat;
-  background-position: 50% 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 100px;
 
   @include max(1000) {
+    flex-direction: column;
+    align-items: center;
     padding-bottom: 50px;
   }
 }
 
+.subscribe-links-block {
+  width: calc(50% - 20px);
+  padding: 40px 40px 10px 40px;
+  border-radius: 30px;
+  background: #f8f7f9;
+
+  @include max(1100) {
+    width: calc(50% - 15px);
+    padding: 30px 30px 0 30px;
+  }
+  @include max(1000) {
+    width: 100%;
+    margin-bottom: 40px;
+    padding: 40px 40px 10px 40px;
+  }
+}
+
+.subscribe-links-block__title {
+  font-size: 20px;
+  font-weight: 800;
+  margin-bottom: 20px;
+  color: #1e1e1e;
+}
+
 .subscribe-links__list {
   display: flex;
-  justify-content: center;
+  //  justify-content: center;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
 }
 
 .subscribe-links__item {
-  width: 25%;
-  margin-bottom: 50px;
+  width: 50%;
+  margin-bottom: 30px;
   list-style: none;
 
-  @include max(1280) {
-    width: 33.33%;
-  }
-  @include max(1000) {
-    width: 50%;
-  }
-  @include max(767) {
+  @include max(520) {
     width: 100%;
-    max-width: 350px;
   }
+
+  //  @include max(1280) {
+  //    width: 33.33%;
+  //  }
+  //  @include max(1000) {
+  //    width: 50%;
+  //  }
+  //  @include max(767) {
+  //    width: 100%;
+  //    max-width: 350px;
+  //  }
 }
 
 .subscribe-links__link {
@@ -158,6 +187,13 @@
   align-items: center;
   white-space: nowrap;
   color: #4e2d5e;
+  span {
+    padding: 0 4px;
+
+    @include max(1290) {
+      display: none;
+    }
+  }
   &::before {
     position: absolute;
     bottom: -10px;
@@ -173,124 +209,104 @@
 
 //begin #VIDEOS
 .subscribe-videos {
-  padding-top: 50px;
-}
-
-.subscribe-videos__list {
   display: flex;
-  flex-wrap: wrap;
-  width: calc(100% + 40px);
-  margin: 0 0 90px 0;
-  margin-left: -40px;
-  padding: 0;
-
-  @include max(560) {
-    width: 100%;
-    margin-left: 0;
-  }
-}
-
-.subscribe-videos__item {
-  width: calc(33.33% - 40px);
-  margin-bottom: 40px;
-  margin-left: 40px;
-  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-bottom: 100px;
 
   @include max(1000) {
-    width: calc(50% - 40px);
+    flex-direction: column-reverse;
+    max-width: 600px;
+    padding-bottom: 50px;
   }
-  @include max(560) {
+}
+
+.subscribe-videos__pic {
+  width: 50%;
+
+  @include max(1000) {
     width: 100%;
-    margin-bottom: 25px;
-    margin-left: 0;
-  }
-}
-
-.subscribe-videos__link {
-  display: flex;
-  overflow: hidden;
-  flex-direction: column;
-  transition: $transition-hover;
-  border-radius: 30px;
-  box-shadow: 0 20px 30px rgba(138, 44, 91, 0);
-  &:hover {
-    box-shadow: 0 20px 30px rgba(138, 44, 91, .08);
-    .subscribe-videos__play img {
-      &:first-child {
-        opacity: 0;
-      }
-      &:last-child {
-        opacity: 1;
-      }
-    }
-    .subscribe-videos__text span {
-      color: #8a2c5b;
-    }
-  }
-}
-
-.subscribe-videos__cover {
-  position: relative;
-  height: 250px;
-  &::before {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    content: '';
-    opacity: .3;
-    background-color: #1e1e1e;
+    margin-bottom: 40px;
   }
   img {
     display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-}
-
-.subscribe-videos__play {
-  position: absolute;
-  z-index: 5;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 68px;
-  height: 68px;
-  margin: auto;
-  img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: block;
-    width: 68px;
-    height: 68px;
-    margin: auto;
-    transition: opacity $transition-hover;
-    &:last-child {
-      opacity: 0;
-    }
+    max-width: 100%;
   }
 }
 
 .subscribe-videos__text {
-  padding: 35px 40px;
+  max-width: 440px;
 
-  @include max(767) {
-    padding: 25px;
+  @include max(1000) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+}
+
+.subscribe-videos__title {
+  font-size: 20px;
+  font-weight: 800;
+  font-style: normal;
+  line-height: 1.6;
+  margin-bottom: 25px;
+  color: #1e1e1e;
+
+  @include max(1000) {
+    text-align: center;
   }
   span {
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 1.67;
-    transition: $transition-hover;
-    color: #1e1e1e;
+    color: #8a2c5b;
+  }
+}
+
+.subscribe-videos__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 350px;
+  min-height: 68px;
+  padding: 10px;
+  cursor: pointer;
+  user-select: none;
+  transition: $transition-hover;
+  text-align: center;
+  white-space: nowrap;
+  text-decoration: none;
+  border: none;
+  border-radius: 3px !important;
+  background-image: linear-gradient(87.99deg, #4e2d5e 0%, #e80b0b 100%);
+  box-shadow: 0 20px 30px rgba(138, 44, 91, 0);
+  img {
+    flex: none;
+    width: 38px;
+    height: 38px;
+    margin-right: 30px;
+
+    @include max(374) {
+      margin-right: 10px;
+    }
+  }
+  span {
+    font-family: 'Inter', sans-serif;
+    font-size: 15px;
+    font-weight: 800;
+    line-height: 1;
+    white-space: nowrap;
+    color: #fff;
+
+    @include max(374) {
+      font-size: 14px;
+    }
+  }
+
+  &:hover {
+    box-shadow: 0 20px 30px rgba(138, 44, 91, .15);
   }
 }
 
