--- a/src/style/sections/_footer.scss
+++ b/src/style/sections/_footer.scss
@@ -106,10 +106,9 @@
 
 .footer-social__link {
   display: block;
-  overflow: hidden;
   width: 32px;
   height: 32px;
-  border-radius: 50%;
+  //border-radius: 50%;
   img {
     display: block;
     width: 100%;
